--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
     width: 100%;
     outline: none;
     font-size: 16px;
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     padding: 0 42px;
     border: 1px solid #999;
 }
@@ -134,6 +134,7 @@ ul .content::-webkit-scrollbar {
 .content li p {
     font-size: 17px;
     font-weight: 500;
+    margin-bottom: 8px;
 }
 .content li span {
     font-size: 15px;
@@ -154,6 +155,14 @@ ul .content::-webkit-scrollbar {
 }
 .btn {
     background: #4d59fb;
-    padding: 0 20px;
+    padding: 0 29px;
     color: #fff;
+    border-radius: 0 5px 5px 0;
+    border: 0;
+    cursor: pointer;
+}
+svg {
+    width: 30px;
+    color: #0919ff;
+    cursor: pointer;
 }
