--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,13 @@ body {
     height: 53px;
     width: 100%;
     outline: none;
-    font-size: 16px;
+    font-size: 13px;
     border-radius: 5px 0 0 5px;
-    padding: 0 42px;
+    padding: 0 12px;
     border: 1px solid #999;
 }
 .search input:focus {
-    padding: 0 41px;
+    padding: 0 12px;
     border: 2px solid #4d59fb;
 }
 .search input::placeholder {
@@ -141,7 +141,7 @@ ul .content::-webkit-scrollbar {
     color: #7e7e7e;
 }
 .content .synonyms .list {
-    display: flex;
+    /* display: flex; */
     flex-wrap: wrap;
 }
 .content .synonyms span {
